--- a/Workshops/WS08/at_home/at_home.vcxproj
+++ b/Workshops/WS08/at_home/at_home.vcxproj
@@ -77,10 +77,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Account.h" />
     <ClInclude Include="ChequingAccount.h" />
+    <ClInclude Include="iAccount.h" />
+    <ClInclude Include="SavingsAccount.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Account.cpp" />
+    <ClCompile Include="Allocator.cpp" />
     <ClCompile Include="ChequingAccount.cpp" />
+    <ClCompile Include="SavingsAccount.cpp" />
     <ClCompile Include="w8_at_home.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
