--- a/Final Project/MS3/MS3.vcxproj.filters
+++ b/Final Project/MS3/MS3.vcxproj.filters
@@ -21,9 +21,21 @@
     <ClCompile Include="ms3_tester.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Product.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ErrorState.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MyProduct.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Product.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ErrorState.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
