--- a/Final Project/MS5/MS5.vcxproj
+++ b/Final Project/MS5/MS5.vcxproj
@@ -12,7 +12,18 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Allocator.cpp" />
+    <ClCompile Include="Date.cpp" />
+    <ClCompile Include="ErrorState.cpp" />
     <ClCompile Include="ms5_tester.cpp" />
+    <ClCompile Include="Product.cpp" />
+    <ClCompile Include="Perishable.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Date.h" />
+    <ClInclude Include="ErrorState.h" />
+    <ClInclude Include="iProduct.h" />
+    <ClInclude Include="Perishable.h" />
+    <ClInclude Include="Product.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{E3AE35E5-EF31-4984-8FA2-6DB4AEA15648}</ProjectGuid>
